# fetch_grasp_suggestion

./: CMakeLists.txt  README.md  package.xml
fetch_grasp_suggestion/: README.md  package.xml
fetch_grasp_suggestion/include/fetch_grasp_suggestion/: cluttered_scene_demo.h  executor.h  point_cloud_manipulation.h
fetch_grasp_suggestion/launch/: cluttered_scene_demo.launch  grasp_suggestion_collector.launch  grasp_suggestion_testing.launch
fetch_grasp_suggestion/scripts/: classifier_node.py  cross_validate_params.py  evaluate_classifier.py
fetch_grasp_suggestion/src/: cluttered_scene_demo.cpp  common.cpp  executor.cpp  suggester.cpp  test_grasp_suggestion.cpp
include/fetch_grasp_suggestion/: executor.h
rail_agile/: CMakeLists.txt  README.md  package.xml
rail_agile/include/agile_grasp/: grasp_hypothesis.h  grasp_localizer.h  localization.h
rail_agile/launch/: rail.launch
rail_agile/msg/: Grasps.msg
rail_agile/src/agile_grasp/: grasp_localizer.cpp  localization.cpp  plot.cpp
rail_agile/src/nodes/: find_grasps.cpp
rail_grasp_calculation/: README.md
rail_grasp_calculation/rail_grasp_calculation_msgs/: README.md
rail_grasp_calculation/rail_grasp_calculation_nodes/: README.md
rail_grasp_calculation/rail_grasp_calculation_nodes/include/rail_grasp_calculation_nodes/: GraspSampler.h
rail_grasp_calculation/rail_grasp_calculation_nodes/launch/: find_grasps.launch
src/: executor.cpp
